--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -1,5 +1,5 @@
 %Input preamble
-\input{preambleappendix}
+\input{preamble}
 \input{output/mainstatistics}
 
 \usepackage[stable]{footmisc}
@@ -40,6 +40,7 @@ The University of Chicago}
 \date{First Draft: January 5, 2016\\ This Draft: \today \\}
 
 \maketitle
+\thispagestyle{empty}
 \restoregeometry
 \end{titlepage}
 
