--- a/output/raw-rosenbaum-table-age-exp_editedTvC.tex
+++ b/output/raw-rosenbaum-table-age-exp_editedTvC.tex
@@ -5,18 +5,18 @@
  & \mc{2}{c}{\textbf{(a) Childhood}}   & \mc{2}{c}{\textbf{(b) School Age}}  \\
  & Females & Males & Females & Males \\
  \cmidrule(lr){2-3}  \cmidrule(lr){4-5}
-\quad Avg. Effect Size &     0.392 &     0.259 &     0.531 &     0.297 \\  
-\quad \% Positive &    95.833 &    75.000 	&	   100.000 &   100.000 \\  
-\quad \% Significant &    45.833 &    29.167 &    55.556 &    11.111 \\  
-\quad Rosenbaum $p$-value &     \textbf{0.086} &     \textbf{0.086} 	&       \textbf{0.022} &     0.147 \\  
+ Average Effect Size &     0.392 &     0.259 &     0.531 &     0.297 \\  
+ \% $>0$ Treatment Effect &    95.833 &    75.000 	&	   100.000 &   100.000 \\  
+ \% $>0$, Significant Treatment Effect&    45.833 &    29.167 &    55.556 &    11.111 \\  
+ Rosenbaum $p$-value &     \textbf{0.086} &     \textbf{0.086} 	&       \textbf{0.022} &     0.147 \\  
  \midrule
  & \mc{2}{c}{\textbf{(c) Adult}}   & \mc{2}{c}{\textbf{(d) All}}  \\
  & Females & Males & Females & Males \\
   \cmidrule(lr){2-3}  \cmidrule(lr){4-5}
-\quad Avg. Effect Size &     0.291 &     0.227 						&     0.381 &     0.254 \\  
-\quad \% Positive &    88.889 &    72.222 				&    94.118 &    78.431 \\  
-\quad \% Significant &    33.333 &    16.667 			&    43.137 &    21.569 \\  
-\quad Rosenbaum $p$-value &     \textbf{0.010} &     \textbf{0.086} 	&       \textbf{0.010} &     \textbf{0.086} \\  
+ Average Effect Size  &     0.291 &     0.227 						&     0.381 &     0.254 \\  
+ \% $>0$ Treatment Effect  &    88.889 &    72.222 				&    94.118 &    78.431 \\  
+ \% $>0$, Significant Treatment Effect &    33.333 &    16.667 			&    43.137 &    21.569 \\  
+ Rosenbaum $p$-value &     \textbf{0.010} &     \textbf{0.086} 	&       \textbf{0.010} &     \textbf{0.086} \\  
 \bottomrule
 \end{tabular}
 
