--- a/preamble.tex
+++ b/preamble.tex
@@ -32,7 +32,7 @@
 \usepackage{natbib}
 \usepackage{bibunits}
 \definecolor{maroon}{HTML}{990012}
-\usepackage[colorlinks=true,linkcolor=maroon,citecolor=maroon,urlcolor=maroon,anchorcolor=maroon]{hyperref}
+\usepackage[colorlinks=true,linkcolor=maroon,citecolor=maroon,urlcolor=maroon,anchorcolor=maroon,hyperfootnotes=false]{hyperref}
 \usepackage{marvosym}
 \usepackage{makeidx}
 \usepackage{tikz}
