--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,31 +1,31 @@
 
 
-This paper studies two influential early childhood programs offered as a child development form of childcare. The programs are the Carolina Abecedarian Project (ABC) and its almost identical sister program, the Carolina Approach to Responsive Education (CARE), both evaluated by the method of random assignment---henceforth ABC/CARE. While certain features and categories of outcomes of these programs have been thoroughly assessed, our paper is the first to aggregate and summarize all of the outcomes available to evaluate the program, including, for example, adulthood administrative criminal records for both the treatment and the control groups.
+This paper studies two influential early childhood programs offered as a child development form of childcare. The programs are the Carolina Abecedarian Project (ABC) and its almost identical sister program, the Carolina Approach to Responsive Education (CARE), both evaluated by the method of random assignment---henceforth ABC/CARE. While certain features and categories of outcomes of ABC/CARE have been thoroughly assessed, our paper is the first to aggregate and summarize all of the outcomes available to evaluate the program, including, for example, adulthood administrative criminal records for both the treatment and the control groups.
 
 ABC/CARE was conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. It was one of the pioneer programs that focused intensively on child-led learning and is a template for many current and proposed early childhood programs.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control children were followed through their mid 30s, with data collected on multiple dimensions of human development. This generates data on over a 100 outcomes that we could use to evaluate the program.
 
-Upon the impracticality of analyzing the hundreds of outcomes available to evaluate the program one at the time and the need to avoid cherry-picking outcomes with significant treatment effects, we propose parametric and non-parametric tests to aggregate and summarize treatment effects. Table~\ref{table:summary} previous our approach. Panel (a) displays our summaries for early-childhood outcomes (ages 0 to 5). We have 35 outcomes at this age (e.g.,\ IQ and socio-emotional skills measures, maternal labor income, HOME scores). We offer four treatment-control comparisons across these outcomes by gender: (i) the average effect size; (i) the percentage of outcomes for which there is a positive treatment effect; (iii) the percentage of outcomes for which there is a positive and significant (10\%) effect; and (iv) the exact $p$-value resulting from a non-parametric comparison of the joint distribution of outcomes \citep{Rosenbaum_2005_Distribution_JRSS}. Panels (b) and (c) are analogous for school age (ages 6 to 18) and adult age (21 to 35), respectively, and Panel (d) includes all of the outcomes that we observe.
+Upon the impracticality of analyzing the hundreds of outcomes available to evaluate the program one at the time and the need to avoid cherry-picking outcomes with significant treatment effects, we propose parametric and non-parametric tests to aggregate and summarize treatment effects. Table~\ref{table:summary} previews our approach. Panel (a) displays our summaries for early-childhood outcomes (ages 0 to 5). We have 24 outcomes at this age (e.g.,\ IQ and socio-emotional skills measures, maternal labor income, HOME scores). We offer four treatment-control comparisons across these outcomes by gender: (i) the average effect size; (i) the percentage of outcomes for which there is a positive treatment effect; (iii) the percentage of outcomes for which there is a positive and significant (10\%) effect; and (iv) the exact $p$-value resulting from a non-parametric comparison of the joint distribution of outcomes \citep{Rosenbaum_2005_Distribution_JRSS}. Panels (b) and (c) are analogous for school age (ages 6 to 18) and adult age (21 to 35), respectively, and Panel (d) includes all of the outcomes that we observe.
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Treatment-Control Comparisons by Gender, Summary} \label{table:summary}
+\caption{Summary of Treatment-Control Comparisons by Gender} \label{table:summary}
 \centering 
 \begin{tabularx}{16.5cm}{XcX}
 & \input{output/raw-rosenbaum-table-age-exp_editedTvC.tex} & 
 \end{tabularx}
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by age and gender. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured after 18. All (panel d), is a combination of all the outcomes in panels a-c. The average effect size is calculated by averaging over the effect size of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. The $p$-values are asymptotic following \citet{Rosenbaum_2005_Distribution_JRSS}. The null hypothesis is that the control and treatment distributions, within gender, are equal. A $p$-value less than 0.1 indicates that the distributions are significantly different. 
+\item \textbf{Note:} This table displays summaries of treatment effects by age and gender. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured after 18. All (panel d), is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect size of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. The $p$-values are asymptotic following \citet{Rosenbaum_2005_Distribution_JRSS}. The null hypothesis is that the control and treatment distributions, within gender, are equal. A $p$-value less than 0.1 indicates that the distributions are significantly different at the 10\% level. 
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
-The first clear message in Table~\ref{table:summary} is that randomized assignment to ABC/CARE benefited both females and males across the life cycle. Across the life-cycle, the average effect size for females (males) is $0.381$ ($0.254)$, the percentage of positive treatment effects is $94\%$ ($78\%$), and the percentage of significant treatment effects is $43\%$ ($22\%$). Standard inference could be provided for these three measures. Instead, we provide the $p$-value of a non-parametric exact test contrasting the joint distribution of the outcomes. The conclusion from these comparisons aligns with the conclusions from the other measures, even in magnitude if the size of the $p$-value is taken as a measure of magnitude \citep{Fisher_1935_Inference_JRSS}. A disadvantage of our summaries is the loss of perspective on the magnitudes of the effects, which we describe and discuss further below.\footnote{For example, assignment to treatment increased college graduation by 17 percentage points, with a standard error of 5 percentage points and where the college graduation rate for the control group is 12\%. For females, assignment to treatment increased high school graduation by 25 percentage points, with a standard error of 1 percentage point and where the high school graduation rate for the control group is 53\% points. These results are the basis of our forecasts: We document that education is actually the main intermediate input when forecasting benefits across the life cycle.}
+The first clear message in Table~\ref{table:summary} is that randomized assignment to ABC/CARE benefited both females and males across the life cycle. Across the life-cycle, the average effect size for females (males) is $0.381$ ($0.254)$, the percentage of positive treatment effects is $94\%$ ($78\%$), and the percentage of significant treatment effects at the $10\%$ level is $43\%$ ($22\%$). Standard inference could be provided for these three measures. Instead, we provide the $p$-value of a non-parametric exact test contrasting the joint distribution of the outcomes. The conclusion from these comparisons aligns with the conclusions from the other measures, even in magnitude if the size of the $p$-value is taken as a measure of magnitude \citep{Fisher_1935_Inference_JRSS}. A disadvantage of our summaries is the loss of perspective on the magnitudes of the effects, which we describe and discuss further below.\footnote{For example, assignment to treatment increased college graduation by 17 percentage points, with a standard error of 5 percentage points and where the college graduation rate for the control group is 12\%. For females, assignment to treatment increased high school graduation by 25 percentage points, with a standard error of 1 percentage point and where the high school graduation rate for the control group is 53\% points. These results are the basis of our forecasts: We document that education is actually the main intermediate input when forecasting benefits across the life cycle.}
 
-The second clear message in Table~\ref{table:summary} is that females benefit more than males. This holds true across the life cycle and across all of the measures that we employ to summarize the treatment effects. To explain the gendered treatment effects, we document that control-group girls grew up in a less favorable environment if compared to boys using baseline measures (e.g.,\ less father presence, lower maternal education and IQ). Girls in the control group who stayed at home ($20\%$), were taken care in a disadvantaged environment. Girls who went to preschools other than ABC/CARE (80\%), likely went to the lowest quality preschools because their families were more resource constrained if compared to their boy counterparts. Thus, girls benefited more from treatment because they would have otherwise grown up in a relatively worst environment if compared to boys.
+The second clear message in Table~\ref{table:summary} is that females benefit more than males. This holds across the life cycle and across all of the measures that we employ to summarize the treatment effects. To explain the gendered treatment effects, we document that control-group girls grew up in a less favorable environment if compared to control-group boys using baseline measures (e.g.,\ less father presence, lower maternal education and IQ). Girls in the control group who stayed at home ($23\%$), were taken care in a disadvantaged environment. Girls who went to preschools other than ABC/CARE (77\%), likely went to the lowest quality preschools because their families were more resource constrained if compared to their boy counterparts. Thus, girls benefited more from treatment because they would have otherwise grown up in a relatively worst environment if compared to boys.
 
-Although there was no significant take-up of preschool alternatives between control-group parents of girls and control-group parents of boys, there is a subtle difference in the take-up of alternatives. Within girls, take-up of alternatives does not differ by socio-economic disadvantage. Within boys, the relatively advantaged stayed at home more often and did not attend the relatively low quality preschool alternatives available in the area at the time when ABC/CARE was implemented. These results are verified when we estimate parameters that explicitly account for control substitution. That is, we compare treatment to alternative preschools and treatment to staying at home. These parameters are not identified by randomization into treatment and require the stronger assumptions that we discuss. Consistent with our description of the counterfactual scenarios, the benefit of ABC/CARE is the same for girls if compared to treatment or if compared to staying at home. Boys benefit the most from ABC/CARE when compared to alternative preschools, given their relatively better home environment.
+Although there was no significant difference in the take-up of preschool alternatives between control-group parents of girls and control-group parents of boys, there is a subtle, important difference in the within-gender take-up of alternatives. Within girls, take-up of alternatives does not differ by socio-economic disadvantage. Within boys, the relatively advantaged stayed at home more often and did not attend the relatively low quality preschool alternatives available in the area at the time when ABC/CARE was implemented. These results are verified when we estimate parameters that explicitly account for control substitution. That is, when we compare treatment to alternative preschools and treatment to staying at home. These parameters are not identified by randomization into treatment and require the stronger assumptions that we discuss below. Consistent with our description of the counterfactual scenarios, the benefit of ABC/CARE is the same for girls if compared to preschool alternatives or if compared to staying at home. Boys benefit the most from ABC/CARE when compared to alternative preschools, given their relatively better home environment.
 
-ABC/CARE, a child development childcare program, greatly benefits children by improving and complementing their home environments or the lower-quality alternative preschool programs. This sounds a cautionary note for advocates of early childhood programs in any form: Quality matters and low-quality programs could cause harm. Dissecting the counterfactual brings our results to a modern context in which many children are enrolled in preschool, for which low-quality is abundant for children from socio-economic disadvantaged backgrounds.\footnote{Approximately 60\% of preschool-age children regularly receive non-parental childcare \citep{FIFCFS_2009_Wellbeing_REPORT}. At age 4, child care break down for disadvantaged children, which compose 13\% of all children in the US \citep{USCB_2014_CoverageReport}, was the following. Head Start: 29\%; Non-Head Start center-based: 26\%; relative care: 15\%; non-relative care: 5\%; parental care: 25\%. While the quality of Head Start centers and family day care arrangements is constant across poor and non-poor children, the quality of the rest of arrangements is considerably and consistently lower for poor children, when compared to non-poor children. This according to Early Childhood Environment and family Dat Care scaled \citep{FIFCFS_2009_Wellbeing_REPORT}.}
+ABC/CARE, a child development childcare program, greatly benefits children by improving and complementing their home environments or the lower-quality alternative preschool programs. This sounds a cautionary note for advocates of early childhood programs in any form: Quality matters and low-quality programs could cause harm. Dissecting the counterfactual brings our results to a modern context in which many children are enrolled in preschool, in which low-quality is abundant for children from socio-economic disadvantaged backgrounds.\footnote{Approximately 60\% of preschool-age children regularly receive non-parental childcare \citep{FIFCFS_2009_Wellbeing_REPORT}. At age 4, the child care break down for disadvantaged children, which compose 13\% of all children in the US \citep{USCB_2014_CoverageReport}, was the following. Head Start: 29\%; Non-Head Start center-based: 26\%; relative care: 15\%; non-relative care: 5\%; parental care: 25\%. While the quality of Head Start centers and family day care arrangements is constant across poor and non-poor children, the quality of the rest of arrangements is considerably and consistently lower for poor children, when compared to non-poor children. This according to Early Childhood Environment and family Dat Care scaled \citep{FIFCFS_2009_Wellbeing_REPORT}.}
 
 The rest of our analysis unfolds in the following way. Section~\ref{sec:data} describes the experimental data we analyze and its special features. It documents the quality level of the alternative childcare that a considerable proportion of the control-group subjects attended. Section~\ref{sec:parameters} defines the treatment effects we estimate and how we summarize them. Section~\ref{sec:treatment-effects} reports the treatment effects overall and by gender and establishes the existence of sharp gender differences for many categories of outcomes. Section~\ref{sec:gender-differences} discusses the sources of these differences. Section~\ref{sec:conclusion} concludes.
