--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -1,4 +1,4 @@
-We analyze a combined sample of the two closely related programs, ABC and CARE. Table~\ref{tab:abc-care-characteristics} summarizes their characteristics. Both interventions were implemented by researchers at the Frank Porter Graham Center (FPG) at the University of North Carolina Chapel Hill, and targeted children from disadvantaged families in the Chapel Hill area. ABC had four cohorts born between 1972 and 1977, and CARE had two cohorts born between 1978 and 1980. Eligibility was determined on the basis of the High Risk Index (HRI) developed for ABC and adapted for CARE \citep{Campbell_Wasik_etal_2008_ECRQ}. Components of the HRI include father's presence, parental employment, and participation in welfare.\footnote{See Appendix~\ref{app:eligibility-pop} for the full list of the determinants of HRI \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}.} Based on these eligibility requirements, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} calculate that 43\% of all African American children would be eligible now and that 19\% were eligible during the intervention.
+We analyze a combined sample of the two closely related programs, ABC and CARE. Table~\ref{tab:abc-care-characteristics} summarizes their characteristics. Both interventions were implemented by researchers at the Frank Porter Graham Center (FPG) at the University of North Carolina Chapel Hill, and targeted children from disadvantaged families in the Chapel Hill area. ABC had four cohorts born between 1972 and 1977, and CARE had two cohorts born between 1978 and 1980. Eligibility was determined on the basis of the High Risk Index (HRI) developed for ABC and adapted for CARE \citep{amey_Smith_1977_AJMD,Wasik_Ramey_etal_1990_CD}. Components of the HRI include father's presence, parental employment, and participation in welfare.\footnote{See Appendix~\ref{app:eligibility-pop} for the full list of the determinants of HRI \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}.} Based on these eligibility requirements, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} calculate that 43\% of all African American children would be eligible now and that 19\% were eligible during the intervention.
 
 Both interventions involved free, intensive center-based care for subjects in the treatment group starting at 8 weeks and continuing until age 5 before the children started kindergarten. Treatment-group subjects also received daily health screenings, diapers, and formula until 6 months. Control-group families received diapers and formula as well for the same period of time \citep{Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}. Between ages 5 and 8, there was an additional component of treatment in which home visitors worked with children and their parents to tutor the children and to encourage families to be involved in their child's schooling. In CARE, all the subjects who received center-based care also received this school-age component. In ABC, treatment status of this component was randomized. We do not analyze this part of the treatment because previous work has found this component of the treatment to have no significant effects \citep{Campbell_Ramey_etal_2002_ADS,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.
 
@@ -16,13 +16,13 @@ Both interventions involved free, intensive center-based care for subjects in th
 \end{threeparttable}
 \end{table}
 
-The program focused on developing language, cognition, and social-emotional skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined \citep{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}. Other curricula used in the program emphasized child-led learning of skills important for future learning \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}. The teachers and classroom aids were trained continuously throughout the intervention. Researchers and child development experts at FPG observed the classroom interactions and relayed detailed feedback to the instructors \citep{Ramey-etal_2012-ABC}.
+The program focused on developing language, cognition, and social-emotional skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined \citep{Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}. Other curricula used in the program emphasized child-led learning of skills important for future learning \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}. The teachers and classroom aids were trained continuously throughout the intervention. Researchers and child development experts at FPG observed the classroom interactions and relayed detailed feedback to the instructors \citep{Ramey-etal_2012-ABC}.
 
-These aspects of the program relate to structural quality rather than process quality, i.e., the daily experiences of the children \citep{Thomason_LaParo_2009_EED}. Aspects of structural quality, including low child-teacher ratios, small group sizes, and teacher education, are often associated with high process quality \citep{Phillipsen_etal_1997_ECRQ}. However, recent studies find that curricula and professional development are even more highly correlated with process quality. This is especially true if the curricula and professional development are informed by knowledge of child development \citep{Slot_etal_2015_Dutch_ECRQ}. Although measures of process quality (e.g., measures of teacher-child interactions) are not available for the ABC/CARE subjects, the curricula and professional development offerings were exceedingly intensive, especially compared to standards of that era \citep{Ramey-etal_2012-ABC}. \textbf{[JJH: discussion off mark] [JLG: Yes, to me this is some real ed school bs, but referee 4 asks us to put this information in her ``minor'' comments 1.]}
+These aspects of the program relate to structural quality rather than process quality, i.e., the daily experiences of the children \citep{Thomason_LaParo_2009_EED}. Aspects of structural quality, including low child-teacher ratios, small group sizes, and teacher education, are often associated with high process quality \citep{Phillipsen_etal_1997_ECRQ}. However, recent studies find that curricula and professional development are even more highly correlated with process quality. This is especially true if the curricula and professional development are informed by knowledge of child development \citep{Slot_etal_2015_Dutch_ECRQ}. Although measures of process quality (e.g., measures of teacher-child interactions) are not available for the ABC/CARE subjects, the curricula and professional development offerings were exceedingly intensive, especially compared to standards of that era \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}. \textbf{[JJH: discussion off mark] [JLG: Yes, to me this is some real ed school bs, but referee 4 asks us to put this information in her ``minor'' comments 1.]}
 
 CARE included an additional arm of treatment. Besides the services in Table~\ref{tab:abc-care-characteristics}, those in the treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. To individually test this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component, but not center-based care \citep{Wasik_Ramey_etal_1990_CD}. In light of previous analyses finding no effect of this component, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} test and do not reject the hypothesis of no treatment effects for this additional component of CARE.} These analyses justify merging the treatment groups of ABC and CARE, even though that of CARE received the additional home-visiting component \citep{ABCCARE_Dataset}. We henceforth analyze the samples as coming from a single ABC/CARE program. This combination is also seen in \citet{Burchinal_etal_2006_MSRCD_IV-Growth-Curve}.
 
-Table~\ref{tab:abccare-baseline} compares pre-program variables between experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. This indicates that males were slightly less advantaged at baseline. However, after accounting for multiple hypotheses using the Holm test, the difference in HRI score is no longer significant \citep{holm1979simple}.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.}
+Table~\ref{tab:abccare-baseline} compares pre-program variables between experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. This indicates that males were slightly less advantaged at baseline. However, after accounting for multiple hypotheses using the Holm test, the difference in HRI score is no longer significant \citep{Holme_1979_Sequential_SJS}.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{app:eligibility-pop}.} \textbf{[JJH: Use Hold Test! Casual!][This is implemented now.]}
 
 \begin{table}[!htbp]
 \centering
@@ -37,14 +37,11 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables between experime
 \end{threeparttable}
 \end{table}
 
-\indent \textbf{[JJH: Use Hold Test! Casual!] [JLG: Holm test in display now.]}
-
-
 \subsection{The Randomization Protocol and its Compromises} \label{section:randomization}
 
 Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups. For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program. Pairing was based on the High Risk Index, as well as maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} 
 
-ABC collected an initial sample of 121 subjects. All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Encouragement from the referral agencies was such that most referred mothers attended and agreed to participate in the initial randomization. We characterize each missing observation in Appendix~\ref{appendix:randomization}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting (matching) methods described in Appendix~\ref{app:method_partialobs}. Twenty-two subjects in ABC did not stay in the program through age 5. The number of dropouts is evenly balanced across treatments and controls. Dropout was primarily related to the health of the child and the mobility of families rather than any dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. All eligible families agreed to participate. Dropping out occurs \emph{after} randomization and is balanced across treatment groups. We conduct the same analysis for the CARE sample, although there were far fewer dropouts and no compromised randomization.\footnote{The modest sample size, especially after dividing the sample by male and female, is unavoidable. No datasets have the experimental design and longitudinal data collection of ABC/CARE with a large sample. Future researchers should repeat these analyses in other, larger studies (e.g., the Infant Health and Development Program) as the subjects continue to age.} 
+ABC collected an initial sample of 121 subjects. All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Encouragement from the referral agencies was such that all but one referred mothers agreed to participate in the initial randomization \citep{Ramey_Yeates_Short_1984_CD,Campbell_Ramey_1995_AERJ} \textbf{[These papers specify that there was only one family who refused to participate.]}. We characterize each missing observation in Appendix~\ref{appendix:randomization}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard weighting (matching) methods described in Appendix~\ref{app:method_partialobs}. Twenty-two subjects in ABC did not stay in the program through age 5. The number of dropouts is evenly balanced across treatments and controls. Dropout was primarily related to the health of the child and the mobility of families rather than any dissatisfaction with the program. The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed \citep{Burchinal_Campbell_etal_1997_CD} \textbf{[This paper is cited in the appendix of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and lists the attrition information.]}. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. All eligible families agreed to participate. Dropping out occurs \emph{after} randomization and is balanced across treatment groups. We conduct the same analysis for the CARE sample, although there were far fewer dropouts and no compromised randomization.\footnote{The modest sample size, especially after dividing the sample by male and female, is unavoidable. No datasets have the experimental design and longitudinal data collection of ABC/CARE with a large sample. Future researchers should repeat these analyses in other, larger studies (e.g., the Infant Health and Development Program) as the subjects continue to age.} 
 
 \subsection{Control Group Substitution}
 
