edited category table

--- a/output/raw-rosenbaum-table-cats-exp_editedTvC.tex
+++ b/output/raw-rosenbaum-table-cats-exp_editedTvC.tex
@@ -1,59 +1,48 @@
 
-\begin{tabular}{lcc}
+\begin{tabular}{lcccc}
 \toprule
-& \mc{2}{c}{Treat. vs. Control}   \\
-\cmidrule(lr){2-3}
- & Females  & Males \\
+& Avg.\ Effect & \% $>0$ & \% $>0$, Sig. & $p$-value \\
+\midrule
+\textbf{IQ}  &  & &  & \\
+\quad Females &     0.719 &   100.000 &    85.714 &     \textbf{0.046} \\
+\quad Males &     0.664 &   100.000 &    85.714  &     \textbf{0.045}  \\
  \midrule
-IQ &     0.719 &     0.664 \\  
-\quad \% Positive &   100.000 &   100.000 \\  
-\quad \% Significant &    85.714 &    85.714 \\  
-\quad $p$-value &     \textbf{0.046} &     \textbf{0.045} \\  
+\textbf{Achievement}  & & & & \\
+\quad Females 	&     0.672 &   100.000 &    80.000&     \textbf{0.046} \\
+\quad Males 	& 0.235 &   100.000 &     0.000 &     \textbf{0.086} \\  
  \midrule
-Achievement &     0.672 &     0.235 \\  
-\quad \% Positive &   100.000 &   100.000 \\  
-\quad \% Significant &    80.000 &     0.000 \\  
-\quad $p$-value &     \textbf{0.046} &     \textbf{0.086} \\  
+\textbf{Social-emotional}  & & & & \\
+\quad Females 	&     0.385 &      92.857&    57.143&     0.235 \\
+\quad Males 	& 0.059 &  50.000&     7.143 &     0.147 \\
  \midrule
-Social-emotional &     0.385 &     0.059 \\  
-\quad \% Positive &    92.857 &    50.000 \\  
-\quad \% Significant &    57.143 &     7.143 \\  
-\quad $p$-value &     0.235 &     0.147 \\  
+\textbf{Mother Labor}  & & & & \\
+\quad Females &     0.228 &   100.000&    20.000 &     \textbf{0.086} \\
+\quad Males &     0.445   &   100.000  &    20.000  &     \textbf{0.001} \\  
  \midrule
-Mother Labor &     0.228 &     0.445 \\  
-\quad \% Positive &   100.000 &   100.000 \\  
-\quad \% Significant &    20.000 &    20.000 \\  
-\quad $p$-value &     \textbf{0.086} &     \textbf{0.001} \\  
+\textbf{Parenting}   & & & & \\
+\quad Females &     0.274 &   100.000 &    20.000 &     0.602 \\
+\quad Males &     0.060 &    80.000  &     0.000 & 0.147 \\  
  \midrule
-Parenting  &     0.274 &     0.060 \\  
-\quad \% Positive &   100.000 &    80.000 \\  
-\quad \% Significant &    20.000 &     0.000 \\  
-\quad $p$-value &     0.602 &     0.147 \\  
+\textbf{Education}  & & & & \\
+\quad Females &     0.356 &    83.333 &    33.333 &     \textbf{0.000} \\
+\quad Males &     0.174   &    83.333 &     0.000   &     0.235 \\  
  \midrule
-Education &     0.356 &     0.174 \\  
-\quad \% Positive &    83.333 &    83.333 \\  
-\quad \% Significant &    33.333 &     0.000 \\  
-\quad $p$-value &     \textbf{0.000} &     0.235 \\  
+\textbf{Employment}   & & & & \\
+\quad Females &     0.200 &   100.000 &     0.000 &     0.151 \\
+\quad Males &     0.438   &   100.000 &     0.000   &     \textbf{0.022} \\  
  \midrule
-Employment &     0.200 &     0.438 \\  
-\quad \% Positive &   100.000 &   100.000 \\  
-\quad \% Significant &     0.000 &     0.000 \\  
-\quad $p$-value &     0.151 &     \textbf{0.022} \\  
+\textbf{Crime}   & & & & \\
+\quad Females &     0.242 &   100.000 &     0.000  &     0.715 \\
+\quad Males &    -0.093 &    33.333  &     0.000 & 0.812 \\  
  \midrule
-Crime &     0.242 &    -0.093 \\  
-\quad \% Positive &   100.000 &    33.333 \\  
-\quad \% Significant &     0.000 &     0.000 \\  
-\quad $p$-value &     0.715 &     0.812 \\  
+\textbf{Risk}  & & & & \\
+ \quad Females &     0.099 &   100.000 &     0.000  &     0.469 \\
+ \quad Males &     0.011 &    25.000  &    25.000 &     \textbf{0.086} \\  
  \midrule
-Risk &     0.099 &     0.011 \\  
-\quad \% Positive &   100.000 &    25.000 \\  
-\quad \% Significant &     0.000 &    25.000 \\  
-\quad $p$-value &     0.469 &     \textbf{0.086} \\  
- \midrule
-Health &     0.060 &     0.061 \\  
-\quad \% Positive &    68.750 &    73.333 \\  
-\quad \% Significant &     6.250 &    13.333 \\  
-\quad $p$-value &     \textbf{0.046} &     \textbf{0.000} \\  
+\textbf{Health}   & & & & \\
+ \quad Females &     0.060   &    68.750 &     6.250 &     \textbf{0.046} \\
+ \quad Males &     0.061  &    73.333 &    13.333  &     \textbf{0.000} \\  
 \bottomrule
 \end{tabular}
 
+% This table displays summaries of treatment effects by outcome category and gender. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size (Avg.\ Effect) is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. The $p$-values are asymptotic following \citet{Rosenbaum_2005_Distribution_JRSS}. The null hypothesis is that the control and treatment distributions, within gender, are equal. A $p$-value less than 0.1 (bolded) indicates that the distributions are significantly different. 
