data and introduction done

--- a/output/raw-rosenbaum-table-age-exp_editedTvC.tex
+++ b/output/raw-rosenbaum-table-age-exp_editedTvC.tex
@@ -10,7 +10,7 @@
  \% $>0$, Significant Treatment Effect&    45.833 &    29.167 &    55.556 &    11.111 \\  
  Rosenbaum $p$-value &     \textbf{0.086} &     \textbf{0.086} 	&       \textbf{0.022} &     0.147 \\  
  \midrule
- & \mc{2}{c}{\textbf{(c) Adult}}   & \mc{2}{c}{\textbf{(d) All}}  \\
+ & \mc{2}{c}{\textbf{(c) Adulthood}}   & \mc{2}{c}{\textbf{(d) All}}  \\
  & Females & Males & Females & Males \\
   \cmidrule(lr){2-3}  \cmidrule(lr){4-5}
  Average Effect Size  &     0.291 &     0.227 						&     0.381 &     0.254 \\  
