--- a/output/raw-rosenbaum-table-cats-exp_editedTvC.tex
+++ b/output/raw-rosenbaum-table-cats-exp_editedTvC.tex
@@ -1,7 +1,8 @@
 
 \begin{tabular}{lcccc}
 \toprule
-& Avg.\ Effect & \% $>0$ & \% $>0$, Sig. & $p$-value \\
+& \footnotesize Average  & \footnotesize \% $>0$ & \footnotesize \% $>0$, Significant & \footnotesize \citet{Rosenbaum_2005_Distribution_JRSS} \\
+& \footnotesize Effect Size & \footnotesize Treatment Effect & \footnotesize Treatment Effect & \footnotesize $p$-value \\ 
 \midrule
 \textbf{IQ}  &  & &  & \\
 \quad Females &     0.719 &   100.000 &    85.714 &     \textbf{0.046} \\
@@ -11,7 +12,7 @@
 \quad Females 	&     0.672 &   100.000 &    80.000&     \textbf{0.046} \\
 \quad Males 	& 0.235 &   100.000 &     0.000 &     \textbf{0.086} \\  
  \midrule
-\textbf{Social-emotional}  & & & & \\
+\textbf{Socio-emotional}  & & & & \\
 \quad Females 	&     0.385 &      92.857&    57.143&     0.235 \\
 \quad Males 	& 0.059 &  50.000&     7.143 &     0.147 \\
  \midrule
