--- a/output/select_rslt_factors.tex
+++ b/output/select_rslt_factors.tex
@@ -1,29 +1,29 @@
   \begin{tabular}{cccccccccc}
   \toprule
-   Variable & Age & (1) & (2) & (3) & (4) & (5) & (6) \\
+   Category & Age & (1) & (2) & (3) & (4) & (5) & (6) \\
 
     \midrule
-     \multicolumn{8}{c}{\textbf{\emph{Females}}} \\ \\
+     \multicolumn{8}{c}{\textbf{\emph{Females}}} \\
     %cat 3
-   \mc{1}{l}{\scriptsize{Parental Income Factor}} & \mc{1}{c}{\scriptsize{1.5 to 21}} & \mc{1}{c}{\scriptsize{0.286}} & \mc{1}{c}{\scriptsize{0.195}} & \mc{1}{c}{\scriptsize{0.578}} & \mc{1}{c}{\scriptsize{0.635}} & \mc{1}{c}{\scriptsize{0.226}} & \mc{1}{c}{\scriptsize{0.297}} \\  
+   \mc{1}{l}{\small{Parental Income Latent}} & \mc{1}{c}{\small{1.5 to 21}} & \mc{1}{c}{\small{0.286}} & \mc{1}{c}{\small{0.195}} & \mc{1}{c}{\small{0.578}} & \mc{1}{c}{\small{0.635}} & \mc{1}{c}{\small{0.226}} & \mc{1}{c}{\small{0.297}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.037)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.080)}}} & \mc{1}{c}{\scriptsize{(0.143)}} & \mc{1}{c}{\scriptsize{\textbf{(0.030)}}} & \mc{1}{c}{\scriptsize{(0.197)}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.021)}}} & \mc{1}{c}{\small{\textbf{(0.037)}}} & \mc{1}{c}{\small{\textbf{(0.080)}}} & \mc{1}{c}{\small{(0.143)}} & \mc{1}{c}{\small{\textbf{(0.030)}}} & \mc{1}{c}{\small{(0.197)}} \\  
 
-    \mc{1}{l}{\scriptsize{Education Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.561}} & \mc{1}{c}{\scriptsize{0.499}} & \mc{1}{c}{\scriptsize{0.632}} & \mc{1}{c}{\scriptsize{0.726}} & \mc{1}{c}{\scriptsize{0.431}} & \mc{1}{c}{\scriptsize{0.312}} \\  
+    \mc{1}{l}{\small{Education Latent}} & \mc{1}{c}{\small{21 to 30}} & \mc{1}{c}{\small{0.561}} & \mc{1}{c}{\small{0.499}} & \mc{1}{c}{\small{0.632}} & \mc{1}{c}{\small{0.726}} & \mc{1}{c}{\small{0.431}} & \mc{1}{c}{\small{0.312}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.028)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.012)}}} & \mc{1}{c}{\scriptsize{(0.195)}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.004)}}} & \mc{1}{c}{\small{\textbf{(0.005)}}} & \mc{1}{c}{\small{\textbf{(0.010)}}} & \mc{1}{c}{\small{\textbf{(0.028)}}} & \mc{1}{c}{\small{\textbf{(0.012)}}} & \mc{1}{c}{\small{(0.195)}} \\  
 
-    \mc{1}{l}{\scriptsize{Employment Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.434}} & \mc{1}{c}{\scriptsize{0.064}} & \mc{1}{c}{\scriptsize{0.793}} & \mc{1}{c}{\scriptsize{0.998}} & \mc{1}{c}{\scriptsize{-0.064}} & \mc{1}{c}{\scriptsize{0.244}} \\  
+    \mc{1}{l}{\small{Employment Latent}} & \mc{1}{c}{\small{21 to 30}} & \mc{1}{c}{\small{0.434}} & \mc{1}{c}{\small{0.064}} & \mc{1}{c}{\small{0.793}} & \mc{1}{c}{\small{0.998}} & \mc{1}{c}{\small{-0.064}} & \mc{1}{c}{\small{0.244}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.041)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.064)}}} & \mc{1}{c}{\scriptsize{(0.233)}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.010)}}} & \mc{1}{c}{\small{\textbf{(0.041)}}} & \mc{1}{c}{\small{\textbf{(0.013)}}} & \mc{1}{c}{\small{\textbf{(0.031)}}} & \mc{1}{c}{\small{\textbf{(0.064)}}} & \mc{1}{c}{\small{(0.233)}} \\  
 
-    \mc{1}{l}{\scriptsize{Crime Factor}} & \mc{1}{c}{\scriptsize{30 to Mid-30s}} & \mc{1}{c}{\scriptsize{-0.239}} & \mc{1}{c}{\scriptsize{-0.304}} & \mc{1}{c}{\scriptsize{-0.764}} & \mc{1}{c}{\scriptsize{-0.725}} & \mc{1}{c}{\scriptsize{-0.108}} & \mc{1}{c}{\scriptsize{-0.070}} \\  
+    \mc{1}{l}{\small{Crime Latent}} & \mc{1}{c}{\small{30 to Mid-30s}} & \mc{1}{c}{\small{-0.239}} & \mc{1}{c}{\small{-0.304}} & \mc{1}{c}{\small{-0.764}} & \mc{1}{c}{\small{-0.725}} & \mc{1}{c}{\small{-0.108}} & \mc{1}{c}{\small{-0.070}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.009)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.008)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.114)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(0.242)}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.009)}}} & \mc{1}{c}{\small{\textbf{(0.008)}}} & \mc{1}{c}{\small{\textbf{(0.010)}}} & \mc{1}{c}{\small{(0.114)}} & \mc{1}{c}{\small{\textbf{(0.020)}}} & \mc{1}{c}{\small{(0.242)}} \\  
 
-    \mc{1}{l}{\scriptsize{Hypertension Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.061}} & \mc{1}{c}{\scriptsize{0.001}} & \mc{1}{c}{\scriptsize{0.121}} & \mc{1}{c}{\scriptsize{0.178}} & \mc{1}{c}{\scriptsize{-0.017}} & \mc{1}{c}{\scriptsize{-0.177}} \\  
+    \mc{1}{l}{\small{Hypertension Latent}} & \mc{1}{c}{\small{Mid-30s}} & \mc{1}{c}{\small{-0.061}} & \mc{1}{c}{\small{0.001}} & \mc{1}{c}{\small{0.121}} & \mc{1}{c}{\small{0.178}} & \mc{1}{c}{\small{-0.017}} & \mc{1}{c}{\small{-0.177}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.042)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.051)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.063)}}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{(0.309)}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.042)}}} & \mc{1}{c}{\small{\textbf{(0.051)}}} & \mc{1}{c}{\small{\textbf{(0.063)}}} & \mc{1}{c}{\small{(0.655)}} & \mc{1}{c}{\small{\textbf{(0.049)}}} & \mc{1}{c}{\small{(0.309)}} \\  
      
      
      
@@ -38,27 +38,27 @@
      
      
 \midrule     
-    \multicolumn{8}{c}{\textbf{\emph{Males}}} \\ \\
+    \multicolumn{8}{c}{\textbf{\emph{Males}}} \\ 
     %cat 3 
 
- \mc{1}{l}{\scriptsize{Parental Income Factor}} & \mc{1}{c}{\scriptsize{1.5 to 21}} & \mc{1}{c}{\scriptsize{-0.078}} & \mc{1}{c}{\scriptsize{-0.222}} & \mc{1}{c}{\scriptsize{1.127}} & \mc{1}{c}{\scriptsize{0.363}} & \mc{1}{c}{\scriptsize{-0.271}} & \mc{1}{c}{\scriptsize{-0.122}} \\  
+ \mc{1}{l}{\small{Parental Income Latent}} & \mc{1}{c}{\small{1.5 to 21}} & \mc{1}{c}{\small{-0.078}} & \mc{1}{c}{\small{-0.222}} & \mc{1}{c}{\small{1.127}} & \mc{1}{c}{\small{0.363}} & \mc{1}{c}{\small{-0.271}} & \mc{1}{c}{\small{-0.122}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.057)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.077)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{(0.307)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.607)}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.057)}}} & \mc{1}{c}{\small{\textbf{(0.077)}}} & \mc{1}{c}{\small{\textbf{(0.094)}}} & \mc{1}{c}{\small{(0.307)}} & \mc{1}{c}{\small{\textbf{(0.079)}}} & \mc{1}{c}{\small{(0.607)}} \\  
 
-    \mc{1}{l}{\scriptsize{Education Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.344}} & \mc{1}{c}{\scriptsize{0.564}} & \mc{1}{c}{\scriptsize{1.020}} & \mc{1}{c}{\scriptsize{0.222}} & \mc{1}{c}{\scriptsize{0.485}} & \mc{1}{c}{\scriptsize{0.375}} \\  
+    \mc{1}{l}{\small{Education Latent}} & \mc{1}{c}{\small{21 to 30}} & \mc{1}{c}{\small{0.344}} & \mc{1}{c}{\small{0.564}} & \mc{1}{c}{\small{1.020}} & \mc{1}{c}{\small{0.222}} & \mc{1}{c}{\small{0.485}} & \mc{1}{c}{\small{0.375}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.299)}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.083)}}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.013)}}} & \mc{1}{c}{\small{\textbf{(0.004)}}} & \mc{1}{c}{\small{\textbf{(0.000)}}} & \mc{1}{c}{\small{(0.299)}} & \mc{1}{c}{\small{\textbf{(0.004)}}} & \mc{1}{c}{\small{\textbf{(0.083)}}} \\  
 
-    \mc{1}{l}{\scriptsize{Employment Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.501}} & \mc{1}{c}{\scriptsize{0.331}} & \mc{1}{c}{\scriptsize{-0.470}} & \mc{1}{c}{\scriptsize{0.098}} & \mc{1}{c}{\scriptsize{0.517}} & \mc{1}{c}{\scriptsize{0.693}} \\  
+    \mc{1}{l}{\small{Employment Latent}} & \mc{1}{c}{\small{21 to 30}} & \mc{1}{c}{\small{0.501}} & \mc{1}{c}{\small{0.331}} & \mc{1}{c}{\small{-0.470}} & \mc{1}{c}{\small{0.098}} & \mc{1}{c}{\small{0.517}} & \mc{1}{c}{\small{0.693}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.019)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.414)}} & \mc{1}{c}{\scriptsize{\textbf{(0.012)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.065)}}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.007)}}} & \mc{1}{c}{\small{\textbf{(0.019)}}} & \mc{1}{c}{\small{\textbf{(0.001)}}} & \mc{1}{c}{\small{(0.414)}} & \mc{1}{c}{\small{\textbf{(0.012)}}} & \mc{1}{c}{\small{\textbf{(0.065)}}} \\  
 
-    \mc{1}{l}{\scriptsize{Crime Factor}} & \mc{1}{c}{\scriptsize{30 to Mid-30s}} & \mc{1}{c}{\scriptsize{0.192}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.729}} & \mc{1}{c}{\scriptsize{0.648}} & \mc{1}{c}{\scriptsize{0.318}} & \mc{1}{c}{\scriptsize{0.224}} \\  
+    \mc{1}{l}{\small{Crime Latent}} & \mc{1}{c}{\small{30 to Mid-30s}} & \mc{1}{c}{\small{0.192}} & \mc{1}{c}{\small{0.333}} & \mc{1}{c}{\small{0.729}} & \mc{1}{c}{\small{0.648}} & \mc{1}{c}{\small{0.318}} & \mc{1}{c}{\small{0.224}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.084)}}} & \mc{1}{c}{\scriptsize{(0.945)}} & \mc{1}{c}{\scriptsize{\textbf{(0.073)}}} & \mc{1}{c}{\scriptsize{(0.682)}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.066)}}} & \mc{1}{c}{\small{\textbf{(0.072)}}} & \mc{1}{c}{\small{\textbf{(0.084)}}} & \mc{1}{c}{\small{(0.945)}} & \mc{1}{c}{\small{\textbf{(0.073)}}} & \mc{1}{c}{\small{(0.682)}} \\  
 
-    \mc{1}{l}{\scriptsize{Hypertension Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.643}} & \mc{1}{c}{\scriptsize{-0.920}} & \mc{1}{c}{\scriptsize{0.146}} & \mc{1}{c}{\scriptsize{-0.025}} & \mc{1}{c}{\scriptsize{-1.315}} & \mc{1}{c}{\scriptsize{-1.140}} \\  
+    \mc{1}{l}{\small{Hypertension Latent}} & \mc{1}{c}{\small{Mid-30s}} & \mc{1}{c}{\small{-0.643}} & \mc{1}{c}{\small{-0.920}} & \mc{1}{c}{\small{0.146}} & \mc{1}{c}{\small{-0.025}} & \mc{1}{c}{\small{-1.315}} & \mc{1}{c}{\small{-1.140}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.097)}}} & \mc{1}{c}{\scriptsize{(0.446)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
+     &  & \mc{1}{c}{\small{\textbf{(0.004)}}} & \mc{1}{c}{\small{\textbf{(0.002)}}} & \mc{1}{c}{\small{\textbf{(0.097)}}} & \mc{1}{c}{\small{(0.446)}} & \mc{1}{c}{\small{\textbf{(0.000)}}} & \mc{1}{c}{\small{\textbf{(0.002)}}} \\  
      \bottomrule
     \end{tabular} 
