--- a/abc_comprehensivecba_appendix-pub.tex
+++ b/abc_comprehensivecba_appendix-pub.tex
@@ -19,7 +19,7 @@
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Appendix: \\ Quantifying the Life-cycle Benefits of an \\ Influential Early Childhood Program}}
+\title{\Large \textbf{Appendix: \\ Quantifying the Life-cycle\\ Benefits of an Influential Early Childhood Program}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
