--- a/heckman.bib
+++ b/heckman.bib
@@ -22863,6 +22863,19 @@ Welfare Reform Academy},
   Timestamp                = {2015.09.08}
 }
 
+@Article{Derigs_1988_Solving_AOR,
+  Title                    = {Solving Non-Bipartite Matching Problems Via Shortest Path Techniques},
+  Author                   = {Derigs, Ulrich},
+  Journal                  = {Annals of Operations Research},
+  Year                     = {1988},
+  Number                   = {1},
+  Pages                    = {225--61},
+  Volume                   = {13},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.15}
+}
+
 @Article{Derman-Sparks_2016_J-of-Pedagogy,
   Title                    = {What {I} Learned from the {Ypsilanti Perry Preschool Project}: A Teacher's Reflections},
   Author                   = {Derman-Sparks, Louise},
@@ -33620,6 +33633,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
+}
+
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -33632,17 +33656,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
-}
-
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
