updated intro to be consistent with story

--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -25,7 +25,7 @@ The first finding in Table~\ref{table:summary} is that randomized assignment to 
 
 The second finding in Table~\ref{table:summary} is that females benefit more than males. This holds across the life cycle and across all of the measures that we employ to summarize the treatment effects. To explain the gendered treatment effects, we document that control-group girls grew up in a less favorable environment if compared to control-group boys using baseline measures (e.g.,\ less father presence, lower maternal education and IQ). Girls in the control group who stayed at home ($23\%$ of the control-group girls), were taken care of in a disadvantaged environment. Girls who went to preschools other than ABC/CARE ($77\%$ of the control-group girls), likely went to the lowest quality preschools because their families were more resource constrained if compared to their boy counterparts. Thus, girls benefited more from treatment because they would have otherwise grown up in a relatively worst environment if compared to boys.\footnote{Documentation in \citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} shows that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this documentation with historical records showing that even the alternatives that followed state and federal standards of the era, were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
 
-Although there was no significant difference in the take-up of preschool alternatives between control-group parents of girls and control-group parents of boys, there is a subtle, important difference in the within-gender take-up of alternatives. Within girls, take-up of alternatives does not differ by socio-economic disadvantage. Within boys, the relatively advantaged stayed at home more often and did not attend the relatively low-quality preschool alternatives available in the area at the time when ABC/CARE was implemented. These results are verified when we estimate parameters that explicitly account for control substitution. That is, when we compare treatment to alternative preschools and treatment to staying at home. These parameters are not identified by randomization into treatment and require the stronger assumptions that we discuss below. Consistent with our description of the counterfactual scenarios, the benefit of ABC/CARE is the same for girls if compared to preschool alternatives or if compared to staying at home. Boys benefit the most from ABC/CARE when compared to alternative preschools, given their relatively better home environment.
+Although there was no significant difference in the take-up of preschool alternatives between control-group parents of girls and control-group parents of boys, there is a subtle, important difference in the within-gender take-up of alternatives. Within girls, take-up of alternatives does not differ significantly by socio-economic disadvantage, although we show later that more disadvantaged control-group parents of girls select home care. Within boys, the relatively advantaged stayed at home more often and did not attend the relatively low-quality preschool alternatives available in the area at the time when ABC/CARE was implemented. These results are verified when we estimate parameters that explicitly account for control substitution. That is, when we compare treatment to alternative preschools and treatment to staying at home. These parameters are not identified by randomization into treatment and require the stronger assumptions that we discuss below. Boys benefit the most from ABC/CARE when compared to alternative preschools, given their relatively better home environment. Girls benefit the most from ABC/CARE when compared to home environments, given that those who stay at home are more disadvantaged. The difference in this benefit is less than the difference for boys, which is consistent with the stronger presence of selection for boys.
 
 ABC/CARE greatly benefits children by providing an enriching environment to complement their home environments. This sounds a cautionary note for advocates of early childhood programs in any form: Quality matters and low-quality programs could cause harm. Dissecting the counterfactual brings our results to a modern context in which many children are enrolled in preschool, and in which low-quality is abundant for children from socio-economic disadvantaged backgrounds.\footnote{Approximately 60\% of preschool-age children regularly receive non-parental childcare \citep{FIFCFS_2009_Wellbeing_REPORT}. At age 4, the child care break down for disadvantaged children, which compose 13\% of all children in the US \citep{USCB_2014_CoverageReport}, was the following. Head Start: 29\%; Non-Head Start center-based: 26\%; relative care: 15\%; non-relative care: 5\%; parental care: 25\%. While the quality of Head Start centers and family day care arrangements is constant across poor and non-poor children, the quality of the rest of arrangements is considerably and consistently lower for poor children, when compared to non-poor children. This according to Early Childhood Environment and family Dat Care scaled \citep{FIFCFS_2009_Wellbeing_REPORT}.}
 
