--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -55,7 +55,7 @@ The test based on the number of outcomes for which the treatment effect is signi
 
 \textbf{[JJH: Add discussion of Rosenbaum.][This subsection now describes the Rosenbaum test.]}
 
-\textbf{A Non-Parametric Test.} We provide a brief explanation of the test in \citet{Rosenbaum_2005_Distribution_JRSS} and refer interested readers to the source for more details. Let $\mathcal{N}$ index the individuals in our sample and consider the block of outcomes $\mathcal{J}_\ell$. Let $d_{ii'}$ be the distance between the individuals $i, i' \in \mathcal{N}$, $i \neq i'$, based on the outcomes in $\mathcal{J}_\ell$. In our application, this is the Mahalanobis distance \citep{Mahalanobis_1936_PNISI}. There is an optimal non-bipartite pairing of individuals according to $d_{ii'}$ \citep{Galil-1986-CSUR}. This is obtained when minimizing the distance across all possible pairings $i, i'$ in the sample. 
+\textbf{A Non-Parametric Test.} We provide a brief explanation of the test in \citet{Rosenbaum_2005_Distribution_JRSS} and refer interested readers to the source for more details. Let $\mathcal{N}$ index the individuals in our sample and consider the block of outcomes $\mathcal{J}_\ell$. Let $d_{ii'}$ be the distance between the individuals $i, i' \in \mathcal{N}$, $i \neq i'$, based on the outcomes in $\mathcal{J}_\ell$. In our application, this is the Mahalanobis distance \citep{Mahalanobis_1936_PNISI}. There is an optimal non-bipartite pairing of individuals according to $d_{ii'}$ \citep{Derigs_1988_Solving_AOR}. This is obtained when minimizing the distance across all possible pairings $i, i'$ in the sample. 
 
 Under the null hypothesis of no treatment effects, pairings of treatment-group children with control-group children should be as frequent as pairings of treatment-group children with treatment-group children and control-group children with control-group children. If a relatively large number of pairs are across groups (treatment-group children matching with control-group children), this fails to accumulate evidence against the null hypothesis that the joint distribution of outcomes in block $\mathcal{J}_\ell$ is the same across the treatment and control groups.
 
