updated table with disadvantage comparison

--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -1,4 +1,4 @@
-\textbf{[This needs to be rewritten.][This section has been rewritten.]}
+\textbf{[JJH: This needs to be rewritten.][This section has been rewritten.]}
 
 Random assignment to treatment does not guarantee that conventional treatment effect estimators answer policy-relevant questions. We define and estimate three parameters that address different policy questions.
 
