--- a/output/rosenbaum-disadvantage-gender_manual.tex
+++ b/output/rosenbaum-disadvantage-gender_manual.tex
@@ -1,12 +1,13 @@
-\begin{tabular}{cccc}
+\begin{tabular}{ccccc}
 \toprule
-Males vs. Females & & \mc{2}{c}{Alt. vs. Home} \\
-\cmidrule(lr){1-2} \cmidrule(lr){3-4}
-Control Group & & Males & Females \\
+& Males vs. Females & & \mc{2}{c}{Alternatives vs. Home} \\
+& & & Males & Females \\
 \midrule
-\textbf{0.007} & & \textbf{0.006} & 0.110 \\
+ \citet{Rosenbaum_2005_Distribution_JRSS}  & \\
+$p$-value & \textbf{0.007} & & \textbf{0.006} & 0.110 \\
 \bottomrule
 \end{tabular}
+
 
 % Control, males vs. females: distance between: factor of m_age_base, m_ed_base, m_iq_base, hh_sibs_base, hrabc_index
 
