--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,1 +1,1 @@
-\noindent This paper studies the life-cycle impacts of an influential early childhood program with randomized assignment. Upon the impracticality of analyzing the dozens of outcomes available to evaluate the program one at the time and the need to avoid cherry-picking outcomes with significant treatment effects, we propose parametric and non-parametric tests to aggregate and summarize treatment effects. This proves useful when documenting gender differences in the impacts of the program. Across the life cycle, girls benefit more than boys from the program. The source of this difference is a worst counterfactual to treatment for girls which results from baseline socio-economic disadvantage.
+\noindent This paper studies the life-cycle impacts of a high-quality, intensive, influential, and widely emulated early childhood program that started early in life (at 8 weeks of age) and had a randomized design. Upon the impracticality of analyzing the dozens of outcomes available to evaluate the program one at the time and the need to avoid cherry-picking outcomes with significant treatment effects, we propose parametric and non-parametric tests to aggregate and summarize treatment effects. We document that girls benefit more than boys. The source of this difference is a worst counterfactual to treatment for girls which results from baseline socio-economic disadvantage. \textbf{[Word count: 100 words.]}
