--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -16,7 +16,7 @@ Given the difficulty of individually analyzing the hundreds of available outcome
 \end{tabularx}
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by age and gender. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured after 18. All (panel d), is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect size of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. The $p$-values are asymptotic following \citet{Rosenbaum_2005_Distribution_JRSS}. The null hypothesis is that the control and treatment distributions, within gender, are equal. A $p$-value less than 0.1 (bolded) indicates that the distributions are significantly different at the 10\% level. 
+\item \textbf{Note:} This table displays summaries of treatment effects by age and gender. Each of the panels contains statistics calculated using outcomes measured at the indicated ages. Early childhood includes outcomes measured before age 6, school age includes outcomes measured between age 6 and 18, and adult includes outcomes measured after 18. All (panel d), is a combination of all the outcomes in panels (a) to (c). The average effect size is calculated by averaging over the effect size of the outcomes in the age category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. A $p$-value less than $0.10$ (bolded) indicates that the distributions are significantly different at the 10\% level. More details on our inference procedure are in Section~\ref{sec:parameters}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
