--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -10,8 +10,8 @@ Both interventions involved intensive center-based care for subjects in the trea
 	\input{output/program-desc-abc-care}
 \begin{tablenotes}
 \footnotesize
-\item Note: Characteristics that do not specify ABC or CARE were present in both. Biologically healthy includes lack of serious illness, including mental retardation. HRI is the High Risk Index. This table is adapted from \citet{Elango_Hojman_etal_2016_Early-Edu}. \\
-\item Sources: \citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Ramey_Smith_1977_AJMD,Ramey_etal_1985_Project-CARE_TiECSE,Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}. 
+\item \textbf{Note:} Characteristics that do not specify ABC or CARE were present in both. Biologically healthy includes lack of serious illness, including mental retardation. HRI is the High Risk Index. This table is adapted from \citet{Elango_Hojman_etal_2016_Early-Edu}. \\
+\item \textbf{Sources:} \citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Ramey_Smith_1977_AJMD,Ramey_etal_1985_Project-CARE_TiECSE,Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}. 
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -32,7 +32,7 @@ Table~\ref{tab:abccare-baseline} compares pre-program variables for experimental
 	\input{output/abccare-baseline}
 \begin{tablenotes}
 \footnotesize
-\item Note: The variables in this table are all measured at baseline, close to when the children were born. Maternal labor supply (Mother works) is represented using an indicator variable. A larger HRI (High Risk Index) score indicates more disadvantage. Apgar, measured at 1 and 5 minutes after birth, is a test of the health condition of newborn babies. A score closer to 10 indicates a healthier condition \citep{Apgar_1966_APGAR-Scoring_PCNA}. Birthweight is in pounds and gestational age is in weeks.
+\item \textbf{Note:} The variables in this table are all measured at baseline, close to when the children were born. Maternal labor supply (Mother works) is represented using an indicator variable. A larger HRI (High Risk Index) score indicates more disadvantage. Apgar, measured at 1 and 5 minutes after birth, is a test of the health condition of newborn babies. A score closer to 10 indicates a healthier condition \citep{Apgar_1966_APGAR-Scoring_PCNA}. Birthweight is in pounds and gestational age is in weeks.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
