--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -1,44 +1,66 @@
-This section discusses the sources of the estimated gender differences. A major determinant is the choice of the alternative childcare arrangements. Males benefit much more from treatment relative to low-quality childcare compared to treatment relative to staying at home. This result is consistent with previous research that shows (i) substantial gender differences resulting from attending low-quality childcare \citep{Kottelenberg_Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) that females are less sensitive to more stressful, low-quality environments (see, e.g., \citealp{Golding_Fitzgerald_2017_IMHJ,Autor-etal_2015_Family-Disadvantage}).
 
-In Appendix~\ref{appendix:propmales-females}, we present tables showing the proportion of outcomes by category for which male outcomes exceed those of females by counterfactual setting. We also partition the sample by father's presence at baseline, a potentially important moderator.\footnote{Recall that we condition on baseline variables to control for selection into childcare for controls. See Appendix~\ref{appendix:amethodology} for a sensitivity study using other methods. They produce comparable estimates, but are less precisely estimated.} Figure~\ref{fig:proportion-altpre} shows the proportions partitioned by alternative childcare setting. The males who stay at home do better than the females in cognitive and parenting measures, employment, and across all outcomes. Unlike the males who attend lower-quality alternative childcare, the males who stay at home have similar crime outcomes as the females. Given the important negative effects of male criminal activity, this finding highlights the magnitude of harm caused by low-quality alternative childcare for males.
-
-\begin{figure}[H]
+\begin{sidewaysfigure}[!htpb]
 \centering
-\caption{Proportion of Outcomes Males $>$ Females, by Outcome Category, Partitioning by Alternative Childcare Setting}
-\label{fig:proportion-altpre}
-	\includegraphics[width=\textwidth]{output/gendergaps-control-moderated-altpre}
-\footnotesize \justify
-Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 1,000 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than 50\% All outcome categories have higher values corresponding to socially desirable outcomes.
-\end{figure}
-
-One explanation for these results is that boys and girls received different types of home care. The fact that more fathers are present for boys who stay at home relative to girls indicates that the two genders could have substantively different experiences. This can be extrapolated to the center-based options as well, including ABC/CARE. Although outside the scope of this paper, it is possible that the observed gender differences in the treatment effects are partially caused by different experiences of center-based care. \citet{Magnuson_Kelchen_Duncan_etal_2016_ECRQ} provide a detailed discussion of some of the potential mechanisms through which such a difference could occur.
-
-Appendix~\ref{appendix:genderdifferences} reports estimates by whether or not the father is present (Figure~\ref{fig:proportion-fhome}). Although the cells are small after these divisions, the results give a suggestive picture of the interaction of gender, treatment, and family background. Parenting is better for control-group males when the father is absent. While this may seem contradictory, the parenting measure includes a scale that captures the absence of punishment. Control-group males with an absent father tend to have higher parenting scores, especially for this scale, relative to control-group males with a father present. In the treatment group, the males with a present father do better than those with an absent father. This hints at a complementarity between the father's parenting and the high-quality treatment. Besides this, few clear-cut patterns emerge. Father's presence interacted with treatment also favors males for IQ. Males in the control group do better when the father is absent in employment.\footnote{The treatment effects might also vary by the presence of other relatives, such as grandparents, especially if they contribute to the rearing of the subject. The variables describing the family are measured with error given the complex structure of many of the subjects' families. For this reason, we do not partition the results by the presence of other relatives.}
-
-Another measure of home environment is maternal locus of control which is measured when the subjects were 1.5 years old.\footnote{See \citet{Rotter_1966_PMGaA}. The researchers implementing ABC/CARE slightly modified the scale to be more appropriate for the population.} An internal locus of control, which is socially desirable, indicates feelings that the respondents can control future outcomes. In contrast, an external locus of control indicates feeling that outside forces determine future outcomes (e.g. luck). We consider pairs of opposing statements. The respondent chooses the statements that more closely align with her beliefs. One point is given for each statement the respondent selects that corresponds with an external locus of control. An example is: ``In the long run people get the respect they deserve in this world'' versus ``Unfortunately, an individual's worth often passes unrecognized no matter how hard he tries.'' If the respondent selects the second statement, she has a greater perception of external locus of control.  We define a respondent as having an internal locus of control if they score below the sample mean and as having an external locus of control if they score at or above the sample mean.
-
-Figure~\ref{fig:proportion-mlocus} shows the proportion of outcomes by category that favor males classified by locus of control. In the control group, a higher internal maternal locus of control promotes better outcomes for males across all outcome categories except health. Another way to state this is that males are more negatively affected if their mothers have a higher external locus of control than are females. This is consistent with the analyses of \citet{Schore_2017_IMHJ} and \citet{Golding_Fitzgerald_2017_IMHJ}. Although locus of control does not necessarily measure depression, this finding is consistent with \citet{Beeghly-etal_2017_IMHJ}, who finds that increased maternal depression leads to worse outcomes for young males relative to females.
-
-\begin{figure}[!htbp]
-\centering
-\caption{Proportion of Outcomes Males $>$ Females, by Outcome Category, Dividing by Maternal Locus of Control}
-\label{fig:proportion-mlocus}
-\begin{subfigure}[h]{0.7\textwidth}
+\caption{Gender and Baseline Socioeconomic Disadvantage in the Control Group} \label{figure:socdis}
+\begin{subfigure}[h]{0.4\textwidth}
 	\centering
-	\caption{Control Group}
-	\includegraphics[width=\textwidth]{output/gendergaps-control-moderated-mlocus}
-	\end{subfigure}
-	
-\begin{subfigure}[h]{0.7\textwidth}
+	\caption{Take-up of Alternatives by Gender} \label{figure:altgender}
+	\includegraphics[width=\textwidth]{output/abccare_controlcontamination_boysgirls}
+\end{subfigure}%
+\begin{subfigure}[h]{0.4\textwidth}
 	\centering
-	\caption{Treatment Group}
-	\includegraphics[width=\textwidth]{output/gendergaps-treatment-moderated-mlocus}
-	\end{subfigure}
-\footnotesize \justify
-Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 1,000 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than 50\%. All outcome categories have higher values corresponding to socially desirable outcomes.
-\end{figure}
+	\caption{Socioeconomic Disadvantage by Gender} \label{figure:disadgender}
+	\includegraphics[width=\textwidth]{output/factorbase_girlsboyscompare}
+\end{subfigure}
+\begin{subfigure}[h]{0.4\textwidth}
+	\centering
+	\caption{Disadvantage by Take-up of Alternatives, Girls} \label{figure:disadgirls}
+	\includegraphics[width=\textwidth]{output/factorbase_wgirlscompare}
+\end{subfigure}%
+\begin{subfigure}[h]{0.4\textwidth}
+	\centering
+	\caption{Disadvantage by Take-up of Alternatives, Boys} \label{figure:disadboys}
+	\includegraphics[width=\textwidth]{output/factorbase_wboyscompare}
+\end{subfigure}
+\footnotesize
+\justify
+\textbf{Note:} Panel (a) displays the cumulative distribution function of enrollment in alternatives by gender. Panel (b) displays how girls and boys separately fit into the overall (girls and boys pooled) distribution of socioeconomic disadvantage. Panel (c) displays how girls who did not enroll and enrolled in alternatives fit into the overall girls distribution of socioeconomic disadvantage. Panel (d) is analogous to Panel (c) for boys. Our measure of socioeconomic disadvantage is a latent or a factor of the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home.
+\end{sidewaysfigure}
 
-Maternal locus of control moderates treatment outcomes differently. Aggregating across outcomes, male treatment outcomes are not much affected by the mother's locus of control. Outcomes are affected for those in the control group. This is especially strong for mental health outcomes. The reduced differential in the treatment group suggests an important compensating role of enriched early childhood programs.
+A better understanding of the counterfactual scenario that children would faced if not in ABC/CARE is useful in explaining the gender differences in the treatment effects. This requires us to identify the parameter in Equation~\eqref{eq:cont1}: The comparison between treatment and staying at home. It also requires us to identify the parameter in Equation~\eqref{eq:cont2}: The analogous comparison to children who attended alternative preschools. These parameters are not identified by randomization into treatment or control. The parents of the control-group children selected either to keep their children at home or take them to preschool alternatives that were available when ABC/CARE was implemented. 
+
+We rely on econometric methods for identification. In the main text, we rely on matching.\footnote{See \citet{Heckman_Ichimura_etal_1998_REStud} for a general discussion of the method, and an assessment of its practical implementation.} This method is practical in our case due to the small size of our samples. In Appendix~\ref{}, we show that instrumental-variable and control-function methods yield similar results but lack precision. In Appendix~\ref{}, we discuss and document our choice of the matching variables, as well as other practical aspects of the implementation of this estimator.
+
+Column (3) shows the raw difference between the treatment-group children and the control-group children who stayed at home. Column (4) implements a matching estimator to weight this difference and fix the counterfactual to ``staying at home.''  Columns (5) and (6) are analogous when fixing the counterfactual to attending an alternative preschool. A clear pattern emerges: Girls benefit more from treatment if compared to staying at home, while boys benefit more from treatment is compared to alternative preschools. For example, \textbf{[JLG: discussion on magnitudes here once Josh factors are available.]} Tables~\ref{table:massiveall1} and~\ref{table:massiveall2} corroborate this when using our different methodologies to assess treatment effects across categories. \textbf{[JLG: discussion on magnitudes here once these two tables are available.]}
+
+\textbf{[JLG: place the two massive all tables here (counterfactual comparisons).]}
+
+The sharp difference in the comparison of treatment to staying at home and alternative preschools suggests that boys and girls faced different situations of socio-economic disadvantaged at home. Figure~\ref{figure:socdis} investigates this. We start by noting that take-up of alternatives does not differ by gender (Panel~\ref{figure:altgender}). What differs by gender is socioeconomic disadvantage. We create a measure of socioeconomic disadvantage at baseline creating a latent or a factor of the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. We assess how girls and boys fit into the overall distribution of this latent in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}).\footnote{Note that this measure is based on baseline characteristics, so this result holds for the treatment group.} This means that girls in the control group were taken care in a disadvantaged environment or went to the lowest quality preschools because their families were more resource constrained if compared to their boy counterparts. Thus, they benefited more than boys if compared to the next best  alternative as perceived by their parents, as documented in Section~\ref{sec:treatment-effects}.
+
+We formally test the difference in disadvantaged across boys and girls in Table~\ref{table:disadtests}. We reject the null of a common joint distribution of the variables composing our measure of socioeconomic disadvantage across girls and boys (at baseline). Panels~\ref{figure:disadgirls} and~\ref{figure:disadboys} of Figure~\ref{figure:socdis} we further dissect socioeconomic disadvantage within genders, and provide the corresponding tests in Table~\ref{table:disadtests}. 
+
+Parents of relatively more advantaged girls are sent to preschool alternatives more often. Parents of relatively more advantaged boys are sent to preschool alternatives more often. This provides an explanation why girls benefited more from treatment if compared to staying at home---which would be a more disadvantaged environment to develop if compared to their male counterparts, while boys benefited more from treatment if compared to attending alternatives---which would be relatively worst given that their parents plausibly sent them to worst alternatives due to a lack of resources or were worst complements to those learning environments. 
+
+\begin{table}[!htpb]
+\begin{threeparttable}
+\caption{Gender and Baseline Socioeconomic Disadvantage in the Control Group, Tests} \label{table:disadtests}
+\centering 
+\begin{tabularx}{16.5cm}{XcX}
+& \input{output/rosenbaum-disadvantage-gender_manual.tex} & 
+\end{tabularx}
+\begin{tablenotes}
+\footnotesize
+\item \textbf{Note:} This table the null of a common joint distribution of the variables composing our measure of socioeconomic disadvantage (mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home) between males and females in the control group and between children who attended  alternative preschool and who stayed at home (within control-group boys or within control-group girls). The $p$-values are asymptotic following \citet{Rosenbaum_2005_Distribution_JRSS}. Statistics significant at the $0.10$ level are bolded.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+
+
+
+
+
+
 
 
 
