--- a/sections/6_conclusion.tex
+++ b/sections/6_conclusion.tex
@@ -1,3 +1,6 @@
+
+\noindent \textbf{[JLG: Anna, I leave this to you as we need to include references that you know better and we need to make it consistent with all of the text.]}
+
 This paper examines gender differences in the impacts of treatment of an influential early childhood program targeted to disadvantaged children. High-quality early childhood programs have positive effects on both boys and girls. Gender gaps favoring males before treatment are mostly reversed by treatment. Control-group males tend to do better than the control-group females, especially in education and employment outcomes. After treatment, most gender gaps are narrowed or even reversed. This corresponds with the finding that a larger proportion of the treatment effects are more often positive and statistically significant for females than for males. ABC/CARE, in addition to improving select individual outcomes, also narrowed the male-female gap in important outcome categories.
 
 Matching on observed characteristics, we present results suggesting that lower-quality childcare arrangements are detrimental for boys relative to staying at home (if high-quality arrangements are not an option). This finding helps explain an apparent contradiction in the literature \citep{Baker_Gruber_etal_2008_JPE,Baker_Gruber_Milligan_2015_Noncog_Defects,Kottelenberg_Lehrer_2014_Gender-Effects} that childcare can harm children. Low-quality childcare can harm boys while girls can be more robust to their childcare arrangements. This evidence is consistent with previous research that finds boys to be more vulnerable early in life than girls \citep{Golding_Fitzgerald_2017_IMHJ}. Similarly, boys are more likely to be harmed by unfavorable home environments (measured by father present and maternal locus of control) than are girls.
